[package]
name = "hsb"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
anyhow = "1"
base64 = "0.21"
dotenvy = "0.15"
itertools = "0.11.0"
